[tool.poetry]
name = "web-hw8"
version = "0.1.0"
description = ""
authors = ["IgorPupynin <98888021+IgorPupynin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_hw8"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
